--- a/Insurance Template.html
+++ b/Insurance Template.html
@@ -608,7 +608,7 @@
                             </tr>
                             <tr>
                               <td align="center" style="font-size:0px;padding:10px 25px;padding-bottom:0;word-break:break-word;">
-                                <div style="font-family:Arial, helvetica, sans-serif;font-size:16px;line-height:20px;text-align:center;color:#000000;">Click the button below to access your percription discounts</div>
+                                <div style="font-family:Arial, helvetica, sans-serif;font-size:16px;line-height:20px;text-align:center;color:#000000;">Click the button below to access your prescriptions discounts</div>
                               </td>
                             </tr>
                             <tr>
@@ -842,7 +842,7 @@
                         <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="" width="100%">
                           <tbody>
                             <tr>
-                              <td align="center" style="font-size:0px;padding:25px 20px 25px;word-break:break-word;">
+                              <td align="center" style="font-size:0px;padding:10px 20px 15px;word-break:break-word;">
                                 <div style="font-family:Arial, helvetica, sans-serif;font-size:15px;font-weight:400;line-height:20px;text-align:center;color:#000000;">Thank you for taking the time to speak with me and trusting me to be your health insurance broker. Please feel free to contact me by call or text at my personal number of <a href="tel:727-641-5724" style="text-decoration:underline; color: #000000;">727-641-5724</a> if you ever have questions.</div>
                               </td>
                             </tr>
