--- a/Template W ID.html
+++ b/Template W ID.html
@@ -168,7 +168,7 @@
                             </tr>
                             <tr>
                               <td align="center" style="font-size:0px;padding:0 0 5px;word-break:break-word;">
-                                <div style="font-family:sans-serif;font-size:45px;font-weight:700;line-height:1;text-align:center;color:#000000;">Hello Susan!</div>
+                                <div style="font-family:sans-serif;font-size:45px;font-weight:700;line-height:1;text-align:center;color:#000000;">Hello XXX!</div>
                               </td>
                             </tr>
                           </tbody>
@@ -655,7 +655,7 @@
                             </tr>
                             <tr>
                               <td align="center" style="font-size:0px;padding:10px 25px;padding-bottom:0;word-break:break-word;">
-                                <div style="font-family:Arial, helvetica, sans-serif;font-size:16px;line-height:20px;text-align:center;color:#000000;">Click the button below to access your percription discounts</div>
+                                <div style="font-family:Arial, helvetica, sans-serif;font-size:16px;line-height:20px;text-align:center;color:#000000;">Click the button below to access your prescriptions discounts</div>
                               </td>
                             </tr>
                             <tr>
